Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6019

readLine() fails on long text lines (20000 chars)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 4.6.0
    • 4.6.0
    • Core: I/O
    • None
    • b7692016f282251002b3e85dfcb5567bd91a12c0

      Commit 1e6b424b692b20dcfec920f8d3563e520ec1ff05 introduced a regression when loading text files with long lines. I am using qt-4.6
      branch.

      The attached test case fails with long lines (LENGTH parameter 20000), but succeeds with short lines (e.g. only 16000 characters)

        1. readline.cpp
          0.7 kB
          Christoph Feck
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            cfeck Christoph Feck
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes